@@ -1,3 +1,8 @@
+2003-08-01 Craig Franklin <craigfranklin@comcast.net>
+  * gputils 0.11.6 Released.
+  * Added support for idata sections in gplink.
+  * Changed extension of gplink object output from ".out" to ".cof"
+
 2003-07-23 Craig Franklin <craigfranklin@comcast.net>
   * Fixed bsr boundary location for 18f248, 18f258,18f448, and 18f458.
   * Changed gpasm, gpdasm, and gpvo memory dump address format from word to
